--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -13,7 +13,7 @@ rules: # For a full list of rules and their description visit: http://www.eslint
     jquery: false # Allow global js variables used in jQuery (e.g. $)
   no-cond-assign: error # Disallow assignment operators in conditional expressions
   no-constant-condition: error # Disallow constant expressions in conditions
-  no-control-regex: warning # Disallow control characters in regular expressions
+  no-control-regex: 1 # Disallow control characters in regular expressions
   no-dupe-args: error # Disallow duplicate arguments in function definitions
   no-dupe-keys: error # Disallow duplicate keys in object literals
   no-duplicate-case: error # Disallow duplicate case labels
@@ -31,11 +31,11 @@ rules: # For a full list of rules and their description visit: http://www.eslint
   no-irregular-whitespace: #  Disallow irregular whitespace outside of strings and comments
     - error
     - skipStrings: true
-    - skipComments: true
+      skipComments: true
   no-obj-calls: error # Disallow calling global object properties as functions
   no-regex-spaces: error # Disallow multiple spaces in regular expressions
   no-sparse-arrays: error # Disallow sparse arrays
-  no-template-curly-in-string: warning # Disallow template literal placeholder syntax in regular strings
+  no-template-curly-in-string: 1 # Disallow template literal placeholder syntax in regular strings
   no-unexpected-multiline: error # Disallow confusing multiline expressions
   no-unreachable: error # Disallow unreachable code after return, throw, continue, and break statements
   no-unsafe-finally: error # Disallow control flow statements in finally blocks
@@ -44,14 +44,14 @@ rules: # For a full list of rules and their description visit: http://www.eslint
   valid-typeof: # Enforce comparing typeof expressions against valid strings
     - error
     - requireStringLiterals: true
- 
+
   # BEST PRACTICES
   block-scoped-var: error # Enforce the use of variables within the scope they are defined
   curly: # Enforce consistent brace style for all control statements
     - error
     - all
-  dot-location: warning # Enforce consistent newlines after dots not before
-  dot-notation: warning # Enforce dot notation whenever possible when calling object keys
+  dot-location: 1 # Enforce consistent newlines after dots not before
+  dot-notation: 1 # Enforce dot notation whenever possible when calling object keys
   eqeqeq: error # Require the use of === and !==
   quard-for-in: error # Require for-in loops to include an if statement
   no-case-declarations: error # Disallow lexical declarations in case clauses
@@ -61,7 +61,7 @@ rules: # For a full list of rules and their description visit: http://www.eslint
   no-empty-pattern: error # Disallow empty destructuring patterns
   no-eq-null: error # Disallow null comparisons without type-checking operators
   no-eval: error # Disallow the use of eval()
-  no-extend-native: warning # Disallow extending native types
+  no-extend-native: 1 # Disallow extending native types
   no-extra-bind: error # Disallow unnecessary calls to .bind()
   no-extra-label: error # Disallow unnecessary labels
   no-fallthrough: error # Disallow fallthrough of case statements
@@ -72,15 +72,15 @@ rules: # For a full list of rules and their description visit: http://www.eslint
   no-invalid-this: error # Disallow this keywords outside of classes or class-like objects
   no-labels: error # Disallow labeled statements
   no-lone-blocks: error # Disallow unnecessary nested blocks
-  no-loop-func: warning # Disallow function declarations and expressions inside loop statements
-  no-magic-numbers: warning # Disallow magic numbers
+  no-loop-func: 1 # Disallow function declarations and expressions inside loop statements
+  no-magic-numbers: 1 # Disallow magic numbers
   no-new: error # Disallow new operators outside of assignments or comparisons
   no-new-func: error # Disallow new operators with the Function object
   no-new-wrappers: error # Disallow new operators with the String, Number, and Boolean objects
   no-octal: error # Disallow octal literals
   no-octal-escape: error # Disallow octal escape sequences in string literals
   no-param-reassign: error # Disallow reassigning function parameters
-  no-proto: warning # Disallow the use of the __proto__ property
+  no-proto: 1 # Disallow the use of the __proto__ property
   no-redeclare: # Disallow variable redeclaration
     - error
     - builtinGlobals: true
@@ -103,9 +103,9 @@ rules: # For a full list of rules and their description visit: http://www.eslint
   no-warning-comments: error # Disallow specified warning terms in comments
   no-with: error # Disallow with statements
   prefer-promise-reject-errors: error # Require using Error objects as Promise rejection reasons
-  radix: warning # Enforce the consistent use of the radix argument when using parseInt()
+  radix: 1 # Enforce the consistent use of the radix argument when using parseInt()
   require-await: error # Disallow async functions which have no await expression
-  vars-on-top: warning # Require var declarations be placed at the top of their containing scope
+  vars-on-top: 1 # Require var declarations be placed at the top of their containing scope
   wrap-iife: # Require parentheses around immediate function invocations
     - error
     - "any"
